<resources>
    <string name="app_name"> </string>
    <string name="app_name2">SocialApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="no_tienes_cuenta_de_socialapp">No tienes cuenta de SocialApp?</string>
    <string name="registarse">Registarse</string>
    <string name="title_account">Account</string>
    <string name="register">Register</string>
    <string name="email">email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seleccionar_foto_de_perfil">Seleccionar foto de perfil</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="seguidores">Seguidores</string>
    <string name="count_followers">0</string>
    <string name="count_follows">0</string>
    <string name="seguidos">seguidos  </string>
    <string name="accountphoto">accountPhoto</string>
    <string name="subir_foto">Subir foto</string>
    <string name="publicationimage">PublicationImage</string>
    <string name="texto_de_ejemplo">TEXTO DE EJEMPLO</string>
    <string name="ubication">Ubication</string>
    <string name="usernamePublication">Username</string>
    <string name="imagepublicationaccount">ImagePublicationAccount</string>
    <string name="imagepublication">ImagePublication</string>
    <string name="esta_publicacion_tiene">Esta publicacion tiene</string>
    <string name="contador_likes">0</string>
    <string name="like_title">Like</string>
    <string name="contador_dislike">0</string>
    <string name="disike_title">Dislike</string>
    <string name="buttonlike">ButtonLike</string>
    <string name="buttondislike">ButtonDislike</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="description">Lorem ipsum dolor sit amet consectetur adipiscing elit interdum, venenatis habitasse sollicitudin magnis donec faucibus porttitor potenti eu, magna luctus aenean urna varius scelerisque a.</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="image_account">image Account</string>
    <string name="_0h">0h</string>
    <string name="publicar">Publicar</string>
    <string name="return_to_home">return_to_home</string>
    <string name="push_post">push_post</string>
    <string name="location">location</string>
    <string name="vacio" />
    <string name="escribe_tu_comentario">Escribe tu comentario...</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje...</string>
    <string name="escribe_tu_ubicacion">escribe una ubicación</string>
    <string name="jesus">jesus</string>
    <string name="esta_publicacion_se_merece_un_10">Esta publicación se merece un 10.</string>
    <string name="holaaa">Holaaa</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="sincronizar_contactos">Sincronizar Contactos</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>

</resources>
