<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notification_option_Fragment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notificaciones" />
        <item
            android:id="@+id/contactoOptionFragment"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/sincronizar_contactos" />
        <item
            android:id="@+id/navigation_login"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/cerrar_sesion" />

    </group>

</menu>
