<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/wallpaper">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="36sp"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textColor="#D5FFFFFF"/>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_margin="10dp"
            android:text="admin"
            android:textColor="#ffffff"/>
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:importantForAutofill="no"
            android:text="admin"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/buttonIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPreguntaRegistro"
            android:text="@string/no_tienes_cuenta_de_socialapp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/buttonIniciarRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registarse"
            android:layout_margin="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>