<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.DetallePublicationFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/userNamePublicationImageView"
                android:layout_width="80dp"
                android:layout_height="43dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/accountphoto"
                android:scaleType="centerInside"
                android:src="@drawable/ic_account_circle_black_24dp"
                app:civ_border_color="#66BB6A"
                app:civ_border_color_direction="top_to_bottom"
                app:civ_border_color_end="@color/cardview_shadow_end_color"
                tools:ignore="PrivateResource" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userNametextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/usernamePublication"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:contentDescription="@string/location"
                        android:src="@drawable/ic_location_on_black_24dp"
                        android:layout_marginTop="3dp"/>

                    <TextView
                        android:id="@+id/ubicationTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/ubication"
                        android:textColor="#929292" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/publicationImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagepublication"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonLikeImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/buttonlike"
                android:src="@drawable/ic_like_black_24dp" />

            <ImageButton
                android:id="@+id/buttonDislikeImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/buttondislike"
                android:src="@drawable/ic_dislike_black_24dp" />

            <TextView
                android:id="@+id/reactionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/esta_publicacion_tiene" />

            <TextView
                android:id="@+id/countLikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contador_likes" />

            <TextView
                android:id="@+id/titleLikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/like_title" />

            <TextView
                android:id="@+id/countDislikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contador_dislike" />

            <TextView
                android:id="@+id/titleDisikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/disike_title" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>