<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/wallpaper">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="36sp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/colorAccent"
            android:importantForAutofill="no"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:textColorHint="@color/colorAccent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_margin="10dp"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:textColorHint="@color/colorAccent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonIniciarRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registarse"
            android:background="@color/colorAccent"
            android:layout_margin="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>