<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="36sp"
        android:textColor="#D5FFFFFF"
        android:background="#66BB6A"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="46dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="641dp"
        android:orientation="horizontal"
        android:layout_marginTop="36dp">

        <LinearLayout
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSeguidores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="52dp"
                android:gravity="center"
                android:text="@string/seguidores" />

            <TextView
                android:id="@+id/textViewCountFollowers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:text="@string/count_followers" />
        </LinearLayout>


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageViewAccountPhoto"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/accountphoto"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account_circle_black_24dp"
            app:civ_border_color="#66BB6A"
            app:civ_border_color_end="@color/cardview_shadow_end_color"
            app:civ_border_color_direction="top_to_bottom"
            tools:ignore="PrivateResource" />

        <LinearLayout
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSeguidos"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="52dp"
                android:gravity="center"
                android:text="@string/seguidos" />

            <TextView
                android:id="@+id/textViewCountFollows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:text="@string/count_follows" />

        </LinearLayout>
    </LinearLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="202dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#66BB6A"
            app:tabTextColor="#D5FFFFFF"/>

    </androidx.viewpager.widget.ViewPager>


</FrameLayout>